# easyVPN

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  setup.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
docs/: DEVELOPMENT.md
scripts/: e2e.sh
src/: App.css  App.tsx  Qr.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  server.rs
