# Workspace root. The Tauri desktop app (`src-tauri`) is intentionally
# EXCLUDED so it keeps its own target dir and lockfile and its `cargo tauri`
# tooling stays self-contained; it depends on `easyvpn-core` by path.
[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]
exclude = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
easyvpn-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
